fix: hide sidebar on mobile

--- a/themes/simple-pure/static/css/style.css
+++ b/themes/simple-pure/static/css/style.css
@@ -576,9 +576,7 @@ blockquote {
   }
 
   .sidebar {
-    position: static;
-    top: auto;
-    order: 2;
+    display: none;
   }
 
   .archive-item {
